tests/paczka1/small_fuzzy/16060214.err
Error in line 1: tFUjEEZwQAR S776 27,4
Error in line 7: S915 S915 85,7
Error in line 8: ZA27 A144 28,5
Error in line 12: S915 S776 90,7
